--- a/projects/parallax/style.css
+++ b/projects/parallax/style.css
@@ -144,7 +144,7 @@ header {
           header nav ul li a:hover {
             background-color: #666; }
 
-@media (max-width: 768px) {
+@media all and (max-width: 768px) {
   .wrapper {
     -webkit-background-size: cover;
     background-size: cover;
