--- a/projects/parallax/style.scss
+++ b/projects/parallax/style.scss
@@ -223,3 +223,25 @@ header{
     }
   }
 }
+
+button{
+  display: block;
+  margin: 0 auto;
+  padding: 20px 50px;
+  cursor: pointer;
+  outline: none;
+  border: 2px solid #555;
+  background-color: #45dfff;
+  transition: .5s ease;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  &:hover{
+    background-color: transparent;
+    border: 2px solid #45dfff;
+    color: #555;
+  }
+}
