--- a/projects/gulpAndJade/app/templates/_layout.jade
+++ b/projects/gulpAndJade/app/templates/_layout.jade
@@ -5,6 +5,7 @@ html(lang="ru-RU")
         title SiteName
 
         link(rel='stylesheet', href="/css/main.min.css")
+        link(rel='stylesheet', href="/css/jquery.fancybox.min.css")
     body
         include ./_header
         block content
@@ -12,3 +13,5 @@ html(lang="ru-RU")
 
         script(src="/js/vendor.min.js")
         script(src="/js/main.min.js")
+        script(src="/libs/vendor/jquery-3.2.1.min.js")
+        script(src="/libs/vendor/jquery.fancybox.min.js")
