--- a/projects/gulpAndJade/app/sass/_homePage.sass
+++ b/projects/gulpAndJade/app/sass/_homePage.sass
@@ -47,11 +47,17 @@ main
     @media screen and (max-width: 769px)
       @include imgGrid(1, 2%)
       margin: 0!important
-    img
-      max-width: 100%
-      height: auto
-      border-radius: 4px
+    a
+      display: block
+      img
+        width: 100%
+        height: auto
+        border-radius: 4px
     @include imgGrid(3, 2%)
-    h4
-      margin: 30px 0
+    .info
+      padding: 15px
       text-align: center
+      h4
+        margin-top: 10px
+      p
+        margin: 10px 0
