--- a/projects/gulpAndJade/app/templates/catalog.jade
+++ b/projects/gulpAndJade/app/templates/catalog.jade
@@ -2,7 +2,7 @@ extends _layout
 
 mixin thumbnail (imageName, caption)
     div.imageBlockTwo
-        a(href='/img/#{imageName}.jpg' data-fancybox)
+        a(href='/img/#{imageName}.jpg' data-fancybox="" data-caption=caption)
             img(src="/img/#{imageName}.jpg")
         h4.image-caption= caption
 
