--- a/projects/gulpAndJade/app/templates/index.jade
+++ b/projects/gulpAndJade/app/templates/index.jade
@@ -1,10 +1,15 @@
 extends _layout
 
-mixin thumbnail (imageName, caption)
+mixin thumbnail (imageName, caption, year, capacity, hp, engine)
     div.imageBlockTwo
-        a(href='/img/#{imageName}.jpg' data-fancybox)
+        a(href='/img/#{imageName}.jpg' target="_blank")
             img(src="/img/#{imageName}.jpg")
-        h4.image-caption= caption
+        div.info
+            h4.image-caption= caption
+            p.year= year
+            p.capacity= capacity
+            p.hp= hp
+            p.engine= engine
 
 block content
     main
@@ -15,10 +20,10 @@ block content
             p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 | Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             div.thumbnail--container
-                +thumbnail("background", "lorem ipsum.")
-                +thumbnail("background", "lorem ipsum.")
-                +thumbnail("background_dark", "lorem ipsum.")
-                +thumbnail("background_dark", "lorem ipsum.")
+                +thumbnail("Corolla-122", "Toyota Corolla ZZE-122", "Year: 2004", "Engine Capacity: 1.8", "Horse Power: 132", "Engine: 1ZZ-FE")
+                +thumbnail("Mark-X-2010", "Toyota Mark X (X130)", "Year: 2010", "Engine Capacity: 2.5", "Horse Power: 203", "Engine: 4GR-FSE")
+                +thumbnail("Mark-X-2017", "Toyota Mark X (X130)", "Year: 2017", "Engine Capacity: 2.5", "Horse Power: 203", "Engine: 4GR-FSE")
+                +thumbnail("Crown-2017", "Toyota Crown (S210)", "Year: 2015", "Engine Capacity: 2.0", "Horse Power: 235", "Engine: 8AR-FTS")
                 +thumbnail("background", "lorem ipsum.")
                 +thumbnail("background_dark", "lorem ipsum.")
                 +thumbnail("background_dark", "lorem ipsum.")
