--- a/projects/gulpAndJade/app/templates/_layout.jade
+++ b/projects/gulpAndJade/app/templates/_layout.jade
@@ -2,14 +2,19 @@ doctype html
 html(lang="ru-RU")
     head
         meta(charset="utf-8")
+        meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
+        meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0")
         title SiteName
 
         link(rel='stylesheet', href="/css/main.min.css")
+        link(rel='stylesheet', href="/css/jquery.fancybox.min.css")
     body
         include ./_header
         block content
         include ./_footer
 
+        script(src="/libs/vendor/jquery-3.2.1.min.js")
+        script(src="/libs/vendor/jquery.fancybox.min.js")
         script(src="/js/vendor.min.js")
         script(src="/js/main.min.js")
-        script(src="/libs/vendor/jquery-3.2.1.min.js")
+        script(src="/js/print.js")
