--- a/projects/parallax/style.css
+++ b/projects/parallax/style.css
@@ -185,4 +185,11 @@ button {
     border: 2px solid #45dfff;
     color: #555; }
 
+@media print {
+  header {
+    display: none; }
+
+  main {
+    display: none; } }
+
 /*# sourceMappingURL=style.css.map */
