--- a/projects/gulpAndJade/app/sass/_homePage.sass
+++ b/projects/gulpAndJade/app/sass/_homePage.sass
@@ -10,24 +10,25 @@
 main
   max-width: 100%
   display: block
+  position: relative
 
-  .container
-    width: 75%
-    padding: 15px
-    height: auto
-    margin: 0 auto
+.container
+  width: 75%
+  padding: 15px
+  height: auto
+  margin: 0 auto
+  @media (max-width: 769px)
+    width: 100%
+    padding: 25px
+  h1
+    text-align: center
     @media (max-width: 769px)
-      width: 100%
-      padding: 25px
-    h1
+      font-size: 20px
+  p
+    margin: 100px 0
+    @media (max-width: 769px)
+      margin: 50px 0
       text-align: center
-      @media (max-width: 769px)
-        font-size: 20px
-    p
-      margin: 100px 0
-      @media (max-width: 769px)
-        margin: 50px 0
-        text-align: center
 
 .imageBlock
   width: 50%
@@ -79,11 +80,76 @@ main
   &:hover
     background-color: #fff
     color: #000
-    
-    
+
+
+.hidden--block
+  height: 80px
+  width: 100%
+  background-color: #fff
+  position: absolute
+  top: -800px
+  overflow: hidden
+  transition: top .1s ease
+  .container
+    height: 100%
+    display: flex
+    justify-content: space-between
+  h3
+    margin: 0
+    color: #26a5e2
+    align-self: center
+  .times
+    cursor: pointer
+    display: inline-block
+    width: 40px
+    height: 40px
+    //padding: 15px
+    .time-1, .time-2
+      width: 40px
+      height: 5px
+      background-color: #e6e6e6
+      display: block
+    .time-1
+      transform: rotate(-45deg) translate(-13px, 14px)
+    .time-2
+      transform: rotate(45deg) translate(10px, 10px)
+
+.photos
+  position: relative
+  height: 80px
+  margin-top: 20px
+  width: 480px
+  .photo
+    position: absolute
+    img
+      -webkit-border-radius: 6px
+      -moz-border-radius: 6px
+      border-radius: 6px
+      user-select: none
+  .first
+    z-index: 2
+    left: 0
+    top: 23px
+  .second
+    z-index: 1
+    right: 0
+
+
+.wrapper
+  transition: .5s ease
+
+.hidden--block.show
+  top: 0
+  transition: .5s ease
+
+.wrapper.show
+  transform: translateY(79px)
+  transition: .5s ease
+
+
 @media print
   .print-btn, footer, header, .imageBlock
     display: none
   .container
     h1
-      margin-top: 80px;
+      margin-top: 80px
