--- a/projects/gulpAndJade/app/templates/_layout.jade
+++ b/projects/gulpAndJade/app/templates/_layout.jade
@@ -9,12 +9,25 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="/css/main.min.css")
         link(rel='stylesheet', href="/css/jquery.fancybox.min.css")
     body
-        include ./_header
-        block content
-        include ./_footer
+    div.hidden--block#hidden--block
+        div.container
+            h3 Дизайн ванных комнат — новый раздел на сайте
+            div.photos
+                div.photo.first
+                    img(src="/img/test1.jpg" alt="test1")
+                div.photo.second
+                    img(src="/img/test2.jpg" alt="test2")
+            div.times#times
+                span.time-1
+                span.time-2
+       div.wrapper
+           include ./_header
+           block content
+           include ./_footer
 
         script(src="/libs/vendor/jquery-3.2.1.min.js")
         script(src="/libs/vendor/jquery.fancybox.min.js")
         script(src="/js/vendor.min.js")
         script(src="/js/main.min.js")
         script(src="/js/print.js")
+        script(src="/js/showBlock.js")
