--- a/projects/gulpAndJade/app/templates/about.jade
+++ b/projects/gulpAndJade/app/templates/about.jade
@@ -1,10 +1,15 @@
 extends _layout
 
-mixin thumbnail (imageName, caption)
+mixin thumbnail (imageName, caption, year, capacity, hp, engine)
     div.imageBlockTwo
         a(href='/img/#{imageName}.jpg' data-fancybox="" data-caption= caption)
             img(src="/img/#{imageName}.jpg")
-        h4.image-caption= caption
+        div.info
+            h4.image-caption= caption
+            p.year= year
+            p.capacity= capacity
+            p.hp= hp
+            p.engine= engine
 
 block content
     main
@@ -13,4 +18,4 @@ block content
             - var x = 8;
             div.thumbnail--container
                 - for (var i = 1; i <= x; i++)
-                    +thumbnail("background", "lorem ipsum.")
+                    +thumbnail("Corolla-122", "Toyota Corolla ZZE-122", "Year: 2004", "Engine Capacity: 1.8", "Horse Power: 132", "Engine: 1ZZ-FE")
