--- a/projects/ottergram/css/style.css
+++ b/projects/ottergram/css/style.css
@@ -40,6 +40,13 @@ ul {
   max-width: 120px;
   border: 1px solid white;
   border: 1px solid rgba(255, 255, 255, 0.8); }
+  .thumbnail--item img {
+    transition: transform 0.2s ease; }
+  .thumbnail--item:hover img {
+    transform: scale(1.2); }
+
+.img--wrapper {
+  overflow: hidden; }
 
 .thumbnail--image {
   display: block;
@@ -53,7 +60,8 @@ ul {
   display: flex;
   white-space: nowrap;
   overflow-x: auto;
-  margin-top: 20px; }
+  margin-top: 20px;
+  padding: 20px 0; }
 
 .thumbnail--title {
   display: block;
@@ -70,7 +78,8 @@ ul {
   align-items: center; }
   .detail-image-container .detail-image-frame {
     text-align: center;
-    position: relative; }
+    position: relative;
+    transition: transform 333ms cubic-bezier(1, 0.06, 0.28, 1); }
   .detail-image-container .detail-iamge {
     width: 100%; }
   .detail-image-container .detail-image-title {
@@ -82,6 +91,21 @@ ul {
     text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
     font-size: 40px; }
 
+.is-tiny {
+  transform: scale(0.001);
+  transition: transform 0ms; }
+
+.hidden-detail .detail-image-container {
+  display: none; }
+
+.hidden-detail .thumbnail--list {
+  flex-direction: column;
+  align-items: center;
+  width: 100%; }
+
+.hidden-detail .thumbnail--item {
+  max-width: 80%; }
+
 @media all and (min-width: 768px) {
   .main-content {
     flex-direction: row;
@@ -90,7 +114,7 @@ ul {
   .thumbnail--list {
     flex-direction: column;
     order: 0;
-    margin-left: 20px; }
+    padding: 0 35px 25px 35px; }
 
   .thumbnail--item {
     max-width: 260px; }
