--- a/projects/ottergram/css/style.sass
+++ b/projects/ottergram/css/style.sass
@@ -40,6 +40,14 @@ ul
   max-width: 120px
   border: 1px solid rgb(100%, 100%, 100%)
   border: 1px solid rgba(100%, 100%, 100%, .8)
+  img
+    transition: transform .2s ease
+  &:hover img
+    transform: scale(1.2)
+
+.img--wrapper
+  overflow: hidden
+
 
 .thumbnail--image
   display: block
@@ -54,6 +62,7 @@ ul
   white-space: nowrap
   overflow-x: auto
   margin-top: 20px
+  padding: 20px 0
 
 .thumbnail--title
   display: block
@@ -72,6 +81,7 @@ ul
   .detail-image-frame
     text-align: center
     position: relative
+    transition: transform 333ms cubic-bezier(1, .06, .28, 1)
   .detail-iamge
     width: 100%
   .detail-image-title
@@ -83,6 +93,21 @@ ul
     text-shadow: rgba(0,0,0,.9) 1px 2px 9px
     font-size: 40px
 
+.is-tiny
+  transform: scale(0.001)
+  transition: transform 0ms
+
+.hidden-detail .detail-image-container
+  display: none
+
+.hidden-detail .thumbnail--list
+  flex-direction: column
+  align-items: center
+  width: 100%
+
+.hidden-detail .thumbnail--item
+  max-width: 80%
+
 @media all and (min-width: 768px)
   .main-content
     flex-direction: row
@@ -90,7 +115,7 @@ ul
   .thumbnail--list
     flex-direction: column
     order: 0
-    margin-left: 20px
+    padding: 0 35px 25px 35px
   .thumbnail--item
     max-width: 260px
     &:not(:first-child)
