--- a/projects/CaliforniaNews/app/sass/_default.sass
+++ b/projects/CaliforniaNews/app/sass/_default.sass
@@ -117,3 +117,67 @@ ul
     font-weight: bold
     margin-left: 8px
     transition: .4s ease
+        
+.form--group
+    display: flex
+    .focus .label--form
+        transform: translateY(-30px)
+        font-size: 12px!important
+    .form--set
+        position: relative
+        width: 242px
+        border: none
+        &:nth-child(2)
+          margin-left: 24px
+        a, span
+          display: block
+          color: #BDBDBD
+          font-size: 12px
+        .no--account-wrapper
+          display: flex
+          a
+            margin-left: 3px
+            color: #3399ff
+        input
+            position: relative
+            width: 100%
+            height: 50px
+            border: none
+            outline: none
+            color: #4F4F4F
+            font-size: 14px
+            font-weight: normal
+            border-bottom: 1px solid #BDBDBD
+            background-color: transparent
+            margin-bottom: 22px
+        .label--form
+            position: absolute
+            line-height: 55px
+            font-weight: normal
+            font-size: 14px
+            color: #BDBDBD
+            transition: all .4s ease        
+
+.popup
+    display: flex
+    justify-content: center
+    align-items: center
+    position: absolute
+    font-size: 14px
+    color: #4F4F4F
+    font-weight: normal
+    top: -40px
+    left: -58px
+    width: 140px
+    height: 32px
+    background-color: #fff
+    border: 1px solid #F2F2F2
+    border-radius: 4px
+    z-index: 2
+    transition: .4s ease
+    visibility: hidden
+    opacity: 0
+.show-popup
+    opacity: 1!important
+    visibility: visible!important
+    
