--- a/projects/CaliforniaNews/app/sass/pages/faq.sass
+++ b/projects/CaliforniaNews/app/sass/pages/faq.sass
@@ -1,3 +1,8 @@
 .content--faq
   width: 900px
   margin: 0 auto 493px auto
+  .content--notes
+    h3
+        font-size: 16px
+        font-weight: normal
+        color: #4F4F4F
