--- a/projects/CaliforniaNews/app/templates/_layout.jade
+++ b/projects/CaliforniaNews/app/templates/_layout.jade
@@ -7,6 +7,7 @@ html(lang="en")
         title California News
 
         link(rel='stylesheet', href="/css/main.min.css")
+        link(rel='stylesheet', href="/css/fonts.css")
     body
         div.wrapper
                 include _header
