--- a/projects/CaliforniaNews/app/sass/_default.sass
+++ b/projects/CaliforniaNews/app/sass/_default.sass
@@ -58,7 +58,7 @@ ul
   p
     line-height: 25px
 
-.content--notes
+.content--notes, .accord--item-content
   h1
     font-size: 36px
     margin-bottom: 22px
