--- a/projects/CaliforniaNews/app/sass/footer.sass
+++ b/projects/CaliforniaNews/app/sass/footer.sass
@@ -25,5 +25,11 @@ footer
       font-size: 16px
       color: #BDBDBD
   .t-logo
+    a
+      display: block
     svg
       fill: #BDBDBD
+      transition: .3s ease
+    &:hover
+      svg
+        fill: #d52b1e
