--- a/projects/CaliforniaNews/app/templates/account.jade
+++ b/projects/CaliforniaNews/app/templates/account.jade
@@ -24,6 +24,8 @@ block content
                 fieldset.content--account-email
                     label(for="email") Email
                     input(type="text" name="email" value="test@mail.com" id="email" readonly)
+                    div.signout--account-wrapper
+                        a.signout--account(href="#") Sign Out
                 form.conetnt--change-password
                     div.form--group
                         fieldset.form--set.change--password-new
