--- a/projects/CaliforniaNews/app/sass/content.sass
+++ b/projects/CaliforniaNews/app/sass/content.sass
@@ -51,6 +51,12 @@ main
   border-radius: 20px
   text-align: center
   box-shadow: 0px 16px 40px rgba(0, 0, 0, 0.1)
+  transition: .4s ease
+  &:hover
+    background-color: #297ACC
+  &:active
+    transform: translateY(3px)
+    background-color: #297ACC
 
 .signin--button
   display: block
@@ -80,14 +86,23 @@ main
   font-weight: bold
   font-size: 16px
   color: #BDBDBD
+  transition: .4s ease
   svg
     fill: #BDBDBD
     margin-right: 8px
+    transition: .4s ease
+  &:hover
+    color: #3399FF
+    svg
+      fill: #3399FF
 
 .howItWorks
   font-weight: bold
   color: #BDBDBD
   font-size: 16px
+  transition: .4s ease
+  &:hover
+    color: #3399FF
 
 
 .content
@@ -142,20 +157,22 @@ main
         margin: 0
         margin-top: 73px
         padding: 0 30px
-    //        flex-direction: column-reverse
-    //        height: auto
-    //        align-items: center
     .jumbo--info
         margin-bottom: 75px
         margin-top: 30px
         width: 450px
         margin-left: 20px
-        h1
-            font-size:
     .jumbo--images
         width: 450px!important
     .content
         width: 90%
         margin: 163px auto 0 auto
         padding: 0 20px
-        
+
+.account--form-show
+  visibility: visible!important
+  opacity: 1!important
+
+.account--form-hide
+  visibility: hidden!important
+  opacity: 0!important
