--- a/projects/CaliforniaNews/app/sass/pages/account.sass
+++ b/projects/CaliforniaNews/app/sass/pages/account.sass
@@ -20,10 +20,20 @@
         font-size: 14px
         font-weight: normal
         color: #4F4F4F
+    .signout--account-wrapper
+      display: block
+      margin-top: 16px
+      .signout--account
+        display: inline-block
+        color: #FF7F66
+        font-size: 14px
+        font-weight: normal
     .conetnt--change-password
         margin-bottom: 25px
         margin-top: 25px
-        display: none
+        //display: none
+        visibility: hidden
+        opacity: 0
         fieldset
           &:not(:last-child)
             margin-right: 24px
@@ -32,10 +42,16 @@
     .content--account-change
       margin-top: 25px
       margin-bottom: 25px
+      transform: translateY(-100px)
+      transition: .4s ease
     .content--account-save
-      display: none
-      //display: flex
+      //display: none
+      visibility: hidden
+      opacity: 0
+      display: flex
       align-items: center
+      transform: translateY(-80px)
+      transition: .4s ease
       .blueBtn
         margin-right: 32px
     .content--account-history
