--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -43,6 +43,17 @@
   .theme--card
     margin-bottom: 104px
     text-align: center
+    transition: .2s ease
+    &:hover
+      .cover--image
+        transform: translateY(-48px)
+        margin-bottom: 0
+        opacity: 1
+      .select--theme
+        opacity: 1
+        visibility: visible
+      p
+        display: none
     h2
       color: #4F4F4F
       font-size: 26px
@@ -52,10 +63,18 @@
     .select--theme
       display: flex
       flex-direction: column
-    a
+      opacity: 0
+      visibility: hidden
+      transition: .2s ease
+    .cover--image
       display: block
       margin-bottom: 32px
-      box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08);
+      box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.08)
+      border-radius: 4px
+      transition: .2s ease
+      opacity: .6
+      img
+        border-radius: 4px
     .blueBtn
       display: inline-block
       margin-top: 16px
